--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 
 body {
+    font-family: 'Nunito', sans-serif;
     background-color: rgb(0, 51, 23);
     color: #85EF47;
     display: flex;
@@ -13,6 +15,7 @@ main {
 }
 
 .header {
+    font-family: 'Nunito', sans-serif;
     background-color: #F9FD50;
     color: #00BD56;
     padding: 12px;
