--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
 main {
     color: #85EF47;
     background-color: #00BD56;
+    border-top-right-radius: 2em;
 }
 
 .header {
@@ -26,8 +27,10 @@ main {
 }
 
 .body-comp {
-    margin: 50px;
+    margin: 5px;
+    padding-top: 0px;
     width: 700px;
+    height: 400px;
 }
 
 .footer {
