--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,10 @@ main {
     height: 60px;
     width: 825px;
     padding-top: 30px;
+}
+
+.footer div {
     display: flex;
     justify-content: center;
+    margin-bottom: 2px;
 }
