--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ main {
     color: #85EF47;
     background-color: #00BD56;
     border-top-right-radius: 2em;
+    /* max-height: 1000vh; */
 }
 
 .header {
