--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ main {
     color: #85EF47;
     background-color: #00BD56;
     border-top-right-radius: 2em;
-    /* max-height: 1000vh; */
 }
 
 .header {
@@ -36,7 +35,8 @@ main {
     margin: 5px;
     padding-top: 0px;
     width: 700px;
-    height: 400px;
+    height: 580px;
+    font-size: 1.2em;
 }
 
 .footer {
