--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Exo+2:800&display=swap');
 
 body {
     font-family: 'Nunito', sans-serif;
@@ -53,4 +54,10 @@ main {
     display: flex;
     justify-content: center;
     margin-bottom: 2px;
+}
+
+.twitter-tag {
+    font-family: 'Exo 2', sans-serif;
+    text-align: center;
+    font-size: 1.4em;
 }
