--- a/src/components/body-comp.css
+++ b/src/components/body-comp.css
@@ -31,6 +31,11 @@ a {
     margin-bottom: 20px;
 }
 
+.bio-comp img {
+    width: 200px;
+    border-radius: 8px;
+}
+
 .projects-comp div {
     margin-bottom: 20px;
 }
