--- a/src/index.css
+++ b/src/index.css
@@ -3,27 +3,37 @@
 
 html {
     height: 100%;
-    min-height: 100%;
+    min-height: 100%;    
 }
 
 body {
     font-family: 'Nunito', sans-serif;
+    height: 100%;
     background-color: rgb(0, 51, 23);
     background-color: #551A8B;
-    background-color: black;
-    background-image: linear-gradient(to bottom, #9640e7, rgb(99, 33, 161), #551A8B, #3d1364);
+    /* background-color: black; */
+    /* background-image: linear-gradient(to bottom, #9640e7, rgb(99, 33, 161), #551A8B, #3d1364); */
+    /* background-image: linear-gradient(to bottom, #a74afd, rgb(99, 33, 161), #551A8B, #300f50); */
+    background-image: linear-gradient(to bottom, #b86bff 1%, rgb(99, 33, 161), #551A8B 60%, #1c092f);
     background-repeat: no-repeat;
-
     color: #85EF47;
     display: flex;
     justify-content: center;
-    max-width: 900px;
+    padding: 0;
+    margin: 0;
 }
 
 main {
+    position: relative;
+
+    z-index: 1000;
+    margin-left: 100px;
+    color: #F9FD50;
     color: #85EF47;
     background-color: #00BD56;
     border-top-right-radius: 2em;
+    max-width: 825px;
+    opacity: 1;
 }
 
 .header {
@@ -43,6 +53,10 @@ main {
 
 .spacer-div {
     height: 35px;
+}
+
+.dif-font {
+    font-family: 'Exo 2', sans-serif;
 }
 
 .body-comp {
@@ -73,4 +87,6 @@ main {
     font-family: 'Exo 2', sans-serif;
     text-align: center;
     font-size: 1.4em;
+    color: #207DFF;
 }
+
