--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,13 @@
 
 html {
     height: 100%;
-    min-height: 100%;    
+    min-height: 100%; 
+    max-height: 100%;  
 }
 
 body {
     font-family: 'Nunito', sans-serif;
-    height: 100%;
+    /* height: 100%; */
     background-color: rgb(0, 51, 23);
     background-color: #551A8B;
     /* background-color: black; */
