changed scroll bar to only appear where needed

--- a/src/components/body-comp.css
+++ b/src/components/body-comp.css
@@ -61,7 +61,8 @@ a {
 
 .projects-comp {
     padding-left: 12px;
-    // overflow: scroll;
+    height: 500px;
+    overflow: scroll;
     // overflow-y: auto
 }
 
