--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ main {
     width: 800px;
     height: 580px;
     font-size: 1.2em;
-    overflow: scroll;
+    // overflow: scroll;
     overflow: -moz-scrollbars-none;
 }
 
