--- a/src/components/body-comp.css
+++ b/src/components/body-comp.css
@@ -91,8 +91,12 @@ a {
     0px;
 }
 
-.img-links {
+.img-links-div {
     margin-top: 35px;
     display: flex;
     justify-content: center;
+}
+
+.img-links {
+    margin: 8px;
 }
